--- a/polls/templates/polls/login.html
+++ b/polls/templates/polls/login.html
@@ -28,7 +28,7 @@
     <div class="card card-login mx-auto mt-5">
       <div class="card-header">Login</div>
       <div class="card-body">
-        <form>
+        <form method="POST" action="polls/login">
           <div class="form-group">
             <div class="form-label-group">
               <input type="id" id="inputid" class="form-control" placeholder="id" required="required" autofocus="autofocus">
@@ -49,7 +49,7 @@
               </label>
             </div>
           </div>
-          <a class="btn btn-primary btn-block" href="index.html">Login</a>
+          <a class="btn btn-primary btn-block">Logine</a>
         </form>
         <div class="text-center">
           <a class="d-block small mt-3" href="register.html">Register an Account</a>
