--- a/polls/templates/polls/forgot-password.html
+++ b/polls/templates/polls/forgot-password.html
@@ -26,24 +26,24 @@
 
   <div class="container">
     <div class="card card-login mx-auto mt-5">
-      <div class="card-header">Reset Password</div>
+      <div class="card-header">비밀번호 수정</div>
       <div class="card-body">
         <div class="text-center mb-4">
-          <h4>Forgot your password?</h4>
-          <p>Enter your email address and we will send you instructions on how to reset your password.</p>
+          <h4>비밀번호를 잊으셨나요?</h4>
+          <p>회원번호를 입력해주세요</p>
         </div>
         <form>
           <div class="form-group">
             <div class="form-label-group">
               <input type="email" id="inputEmail" class="form-control" placeholder="Enter email address" required="required" autofocus="autofocus">
-              <label for="inputEmail">Enter email address</label>
+              <label for="inputEmail">회원번호</label>
             </div>
           </div>
-          <a class="btn btn-primary btn-block" href="login.html">Reset Password</a>
+          <a class="btn btn-primary btn-block" href="/">비밀번호 리셋</a>
         </form>
         <div class="text-center">
-          <a class="d-block small mt-3" href="register.html">Register an Account</a>
-          <a class="d-block small" href="login.html">Login Page</a>
+          <a class="d-block small mt-3" href="/register/">회원가입</a>
+          <a class="d-block small" href="/">로그인 페이지</a>
         </div>
       </div>
     </div>
