--- a/polls/templates/polls/login.html
+++ b/polls/templates/polls/login.html
@@ -12,7 +12,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>SB Admin - Login  </title>
+  <title>국립 도서관 도서추천서비스 로그인  </title>
 
   <!-- Custom fonts for this template-->
   <link href="{% static 'vendor/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
@@ -26,34 +26,34 @@
 <body class="bg-dark">
   <div class="container">
     <div class="card card-login mx-auto mt-5">
-      <div class="card-header">Login</div>
+      <div class="card-header">로그인</div>
       <div class="card-body">
         <form method="POST" action="polls/login">
           <div class="form-group">
             <div class="form-label-group">
               <input type="id" id="inputid" class="form-control" placeholder="id" required="required" autofocus="autofocus">
-              <label for="inputid">ID</label>
+              <label for="inputid">회원번호</label>
             </div>
           </div>
           <div class="form-group">
             <div class="form-label-group">
               <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="required">
-              <label for="inputPassword">Password</label>
+              <label for="inputPassword">비밀번호</label>
             </div>
           </div>
           <div class="form-group">
             <div class="checkbox">
               <label>
                 <input type="checkbox" value="remember-me">
-                Remember Password
+                자동 로그인
               </label>
             </div>
           </div>
-          <a class="btn btn-primary btn-block">Logine</a>
+          <a class="btn btn-primary btn-block">로그인</a>
         </form>
         <div class="text-center">
-          <a class="d-block small mt-3" href="register.html">Register an Account</a>
-          <a class="d-block small" href="forgot-password.html">Forgot Password?</a>
+          <a class="d-block small mt-3" href="/register/">회원가입</a>
+          <a class="d-block small" href="/forgotpassword/">비밀번호를 잊으셨나요?</a>
         </div>
       </div>
     </div>
