--- a/polls/templates/polls/register.html
+++ b/polls/templates/polls/register.html
@@ -91,10 +91,10 @@
           </div>     
       
   
-          <a class="btn btn-primary btn-block">회원가입</a>
+          <a class="btn btn-primary btn-block" href="/">회원가입</a>
         </form>
           <br></br>
-          <a class="btn btn-primary btn-block">취소</a>
+          <a class="btn btn-primary btn-block" href="/"> 취소</a>
           <!-- <a class="d-block small mt-3" href="login.html">Login Page</a> -->
           <!-- <a class="d-block small" href="forgot-password.html">Forgot Password?</a> -->
         
