--- a/polls/templates/polls/login.html
+++ b/polls/templates/polls/login.html
@@ -28,16 +28,16 @@
     <div class="card card-login mx-auto mt-5">
       <div class="card-header">로그인</div>
       <div class="card-body">
-        <form method="POST" action="polls/login">
+        <form method="POST" action="/login/"> {% csrf_token %} <!--토큰 보안을 위해 csrf 선언--> 
           <div class="form-group">
             <div class="form-label-group">
-              <input type="id" id="inputid" class="form-control" placeholder="id" required="required" autofocus="autofocus">
+              <input type="id" id="user_id" name="user_id" class="form-control" placeholder="id" required="required" autofocus="autofocus">
               <label for="inputid">회원번호</label>
             </div>
           </div>
           <div class="form-group">
             <div class="form-label-group">
-              <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="required">
+              <input type="password" id="pw" name="pw" class="form-control" placeholder="Password" required="required">
               <label for="inputPassword">비밀번호</label>
             </div>
           </div>
@@ -49,7 +49,8 @@
               </label>
             </div>
           </div>
-          <a class="btn btn-primary btn-block">로그인</a>
+          <input type="submit" class="btn btn-primary btn-block">
+          
         </form>
         <div class="text-center">
           <a class="d-block small mt-3" href="/register/">회원가입</a>
