--- a/polls/templates/polls/test.html
+++ b/polls/templates/polls/test.html
@@ -1,36 +1,33 @@
+{% load static %}
 <html lang="en">
 <head>
-  <title>선거 후보</title>
+  <title>유저의 대여 목록</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <!-- Bootstrap core CSS -->
+  <link href="{% static 'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div class="container">
     <table class="table table-striped">
-        <thead>
-        <tr>
-            <td><B>이름</B></td>
-            <td><B>소개</B></td>
-            <td><B>출마지역</B></td>
-            <td><B>기호</B></td>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td>가후보</td>
-            <td>후보입니다.</td>
-            <td>우리나라</td>
-            <td>기호1번</td>
-        </tr>
-        <tr>
-            <td>나후보</td>
-            <td>후보입니다.</td>
-            <td>우리나라</td>
-            <td>기호2번</td>
-        </tr>
+        {% block content %}
+        <h1 class="mt-5">유저의 대여 목록</h1>      
+        {% if booklist %}
+        <ul>
+          {% for book in booklist %}
+           <li>
+            {{ book.user_id.name }},{{ book.isbn.name }} ({{book.isbn.author}})
+           
+           </li>
+          {% endfor %}
+        </ul>
+        {% else %}
+          <p>There are no books in the library.</p>
+        {% endif %} 
+        {% endblock %}
+      </div>
         <tbody>
     </table>
 </body>
