--- a/polls/templates/polls/index1.html
+++ b/polls/templates/polls/index1.html
@@ -22,19 +22,19 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
+      <a class="navbar-brand" href="#">도서관 개인화 추천 서비스</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home
+            <a class="nav-link" href="{% url 'logout' %}">로그아웃
               <span class="sr-only">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="{% url 'rentlist2' %}">대여목록</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Services</a>
@@ -54,11 +54,11 @@
         {% block content %}
         <h1 class="mt-5">개인화 추천목록</h1>
         <p class="lead">Complete with pre-defined file paths and responsive navigation!</p>        
-        {% if Books %}
+        {% if recolist %}
         <ul>
-          {% for book in Books %}
+          {% for book in recolist %}
            <li>
-              <a href="{% url 'bookdetail' pk=book.isbn %}">{{ book.name }}</a> ({{book.author}}), ({{book.isbn}})
+              <a href="{% url 'bookdetail' pk=book.isbn.isbn %}">{{ book.isbn.name }}</a> ({{book.isbn.author}}), ({{book.isbn.isbn}})
            
            </li>
           {% endfor %}
